# pytest-mpi

./: README.md  mpispawn.py  pyproject.toml  pytest_mpi.py
pytest_mpi/: __init__.py  core.py  parallel_assert.py  plugin.py
